--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
    </header>
    <div class="holy-grail-body">
     <section class="holy-grail-content">
-      <p>Main Content</p>
+      <section class="quotes"><h1>Musician and Aspiring Web Developer</h1>
+      <p>Learn something new everyday</p>
+      <h1 class="bigquote">"You Don't Yell At a Bud Because It Isnt a Flower Yet" - Larry Moss</h1></section>
     </section>
+    
+      
     <div class="holy-grail-sidebar-1 hg-sidebar">
       <p>Sidebar 1</p>
     </div>
     <div class="holy-grail-sidebar-2 hg-sidebar">
       <p>Sidebar 2</p>
     </div>
+    </div>
     <footer>
       &copy;2023 Made with Cheese and Rice
     </footer>
-     </div>
   </body>
 </html>
