--- a/index.html
+++ b/index.html
@@ -7,31 +7,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="holy-grail">
-   <header class="nav">
-      <h1>AJ SEADLER</h1>
+    <header class="nav">
+      <h1 class="name">AJ SEADLER</h1>
       <div class="links">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
       </div>
-   </header>
-   <div class="holy-grail-body">
-    <section class="holy-grail-content">
-      <section class="quotes"><h1>Musician and Aspiring Web Developer</h1>
-      <p>Learn something new everyday</p>
-      <h1 class="bigquote">"You Don't Yell At a Bud Because It Isnt a Flower Yet" - Larry Moss</h1></section>
-    </section>
-    
-      
-    <div class="holy-grail-sidebar-1 hg-sidebar">
-      <p>Sidebar 1</p>
+    </header>
+    <div class="holy-grail-body">
+      <section class="holy-grail-content">
+        <section class="quotes">
+          <h1>Musician and Aspiring Web Developer</h1>
+          <p>Learn something new everyday</p>
+          <h1 class="bigquote">
+            "Some random quote" - some random person
+          </h1>
+        </section>
+      </section>
+
+      <div class="holy-grail-sidebar-1 hg-sidebar">
+        <p></p>
+      </div>
+      <div class="holy-grail-sidebar-2 hg-sidebar">
+        <p></p>
+      </div>
     </div>
-    <div class="holy-grail-sidebar-2 hg-sidebar">
-      <p>Sidebar 2</p>
-    </div>
-    </div>
-    <footer>
-      &copy;2023 Made with Cheese and Rice
-    </footer>
+    <footer>&copy;2023 Made with Cheese and Rice</footer>
   </body>
 </html>
