--- a/portfolio.html
+++ b/portfolio.html
@@ -17,18 +17,10 @@
     </header>
     <div class="holy-grail-body">
       <section class="holy-grail-content">
-        <div class="content">
-          <img class="guitar" src="guitar.jpeg" alt="guitar"/>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
-          aliquam voluptatibus, soluta, commodi dolore magnam quod dolores
-          pariatur atque incidunt esse! Optio soluta alias in deserunt iure
-          maxime cupiditate quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores iusto error suscipit! Placeat corporis quae dolores unde laudantium nihil aliquid at libero neque. Distinctio, facere itaque mollitia culpa illum officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe illo dolorem reprehenderit? Ex reprehenderit quasi corrupti fugit, consequuntur itaque animi dolorum maxime vero et impedit minus eos magnam eligendi quis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dignissimos natus inventore quae magni iusto sint provident non veritatis. Eos aliquam quod itaque necessitatibus? Culpa beatae voluptas labore inventore sint.
-        </p>
-          </div>
-          <div class="cacuts">
-            <img src="cactus.jpeg" alt=""></div>
-         
+        <div class="portcontent">
+          <h1>Projects</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, dicta incidunt quas consequatur blanditiis quae! Veritatis quia autem fugiat dolorem rerum quisquam fuga, perspiciatis, repellendus non ullam ipsum? Odio, dicta!</p>
+        </div>
       </section>
     
 
